# videos

./: .editorconfig  .gitignore  .travis.yml  LICENSE.md  README.md  async.py  iap2020_lec1.py  iap2020_lec10.py  iap2020_lec11.py  iap2020_lec2.py  iap2020_lec3.py  iap2020_lec4.py  iap2020_lec5.py  iap2020_lec6.py  iap2020_lec7.py  iap2020_lec8.py  iap2020_lec9.py  iap2026_lec1.py  iap2026_lec2.py  iap2026_lec3.py  iap2026_lec4.py  iap2026_lec5.py  lec1.py  lec10.py  lec11.py  lec2.py  lec3.py  lec4.py  lec5.py  lec6.py  lec7.py  lec8.py  lec9.py  lib.py  normalize_sbv.py  pyproject.toml  synctool.py  vsync.py
.github/workflows/: build.yml  ci.yml
